// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DialogInlineTrigger - Snapshots > matches snapshot with a custom className 1`] = `
<span
  class="text-sm cursor-pointer font-medium text-foreground"
  data-testid="typography"
  role="button"
  tabindex="0"
>
  Privacy Policy
</span>
`;

exports[`DialogInlineTrigger - Snapshots > matches snapshot with default props 1`] = `
<span
  class="text-sm cursor-pointer font-medium text-brand"
  data-testid="typography"
  role="button"
  tabindex="0"
>
  Terms of Service
</span>
`;
